Fix CSS bleed issues by using ID selectors. Ensure percentage line has height even when empty. reduce css file size. change js const names

--- a/src/b.css
+++ b/src/b.css
@@ -1,60 +1,60 @@
-.carbonbadge {
+#wcb {
     --b1: #0e11a8;
     --b2: #00ffbc;
     font-size: 15px;
-    line-height: 1.15;
     text-align: center;
     color: var(--b1);
 }
 
-.carbonbadge sub {
+#wcb sub {
     vertical-align: middle;
     position: relative;
     top: .3em;
-    font-size: 0.7em;
-}
-
-.carbonbadge p,
-.carbonbadge a {
-    text-align: center;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1em;
-    margin: 0.2em 0;
-    line-height: 1.15;
-    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    font-size: .7em;
 }
 
 #wcb_g,
-.carbonbadge a {
-    padding: 0.3em 0.5em;
-    background: #fff;
-    border: 0.13em solid var(--b2);
-    border-radius: .3em 0 0 .3em;
+#wcb_a,
+#wcb_2 {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 1em;
+    line-height: 1.15;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    text-decoration: none;
+    margin: .2em 0;
+}
+
+#wcb_g,
+#wcb_a {
+    padding: .3em .5em;
+    border: .13em solid var(--b2);
 }
 
 #wcb_g {
+    border-radius: .3em 0 0 .3em;
+    background: #fff;
     border-right: 0;
     min-width: 8.2em;
 }
 
-.carbonbadge a {
+#wcb_a {
     border-radius: 0 .3em .3em 0;
     border-left: 0;
     background: var(--b1);
     color: #fff;
-    text-decoration: none;
     font-weight: 700;
     border-color: var(--b1);
 }
 
-.wcb-d #wcb_2 {
-    color: #fff;
-}
-
-.carbonbadge.wcb-d a {
+.wcb-d #wcb_a {
     color: var(--b1);
     background: var(--b2);
     border-color: var(--b2);
+}
+
+.wcb-d #wcb_2 {
+    color: #fff;
 }
